--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Gods Dot Fighting - Fast Pace</title>
+  <title>Gods Dot Fighting - Wrath of the Ancients</title>
   <style>
     html, body {
       margin: 0; padding: 0; overflow: hidden; background: black;
@@ -413,7 +413,7 @@
 
         const target = (b.owner === "player") ? ai : player;
         if (!target.invincible && checkBeamCollision(b, target)) {
-          target.hp -= 10;
+          target.hp -= 20;
         }
       }
     }
